--- a/styles/font.css
+++ b/styles/font.css
@@ -21,3 +21,8 @@
   src: url('../fonts/Inter_28pt-Bold.ttf') format('truetype');
   font-weight: 700;
 }
+@font-face {
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins-Regular.ttf') format('truetype');
+  font-weight: 400;
+}
