--- a/styles/font.css
+++ b/styles/font.css
@@ -5,19 +5,19 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter Medium';
   src: url('../fonts/Inter_28pt-Medium.ttf') format('truetype');
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter SemiBold';
   src: url('../fonts/Inter_28pt-SemiBold.ttf') format('truetype');
   font-weight: 600;
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter Bold';
   src: url('../fonts/Inter_28pt-Bold.ttf') format('truetype');
   font-weight: 700;
 }
