--- a/styles/index.css
+++ b/styles/index.css
@@ -37,15 +37,18 @@ a {
 /* Font */
 
 .Medium {
-  font-weight: 500;
+  font-family: "Inter Medium";
+  font-weight: 500 !important;
 }
 
 .SemiBold {
-  font-weight: 600;
+  font-family: "Inter Inter SemiBold";
+  font-weight: 600 !important;
 }
 
 .Bold {
-  font-weight: 700;
+  font-family: "Inter Inter Bold";
+  font-weight: 700 !important;
 }
 
 /* custom color */
@@ -62,7 +65,7 @@ a {
   color: #DB4444;
 }
 .red_sections-bg {
-  background-color: #DB4444;
+  background-color: #DB4444 !important;
 }
 
 /* nav */
@@ -253,4 +256,99 @@ border-radius: .3rem;
   margin: 0 0.4rem;
   display: flex;
   align-items: center;
+}
+/* card */
+.card_product {
+  width: 100%;    
+  max-width: 27rem;
+  max-height: 35rem;
+  background-color: #F5F5F5 !important;
+  padding-top: 5rem;
+  scroll-snap-align: start;
+}
+.card_img {
+  width: 17rem !important;
+  height: 14rem;
+}
+.card_img_wrapper {
+  width: 100%;
+  height: 14rem; /* ارتفاع ثابت برای نگهدارنده */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /* اگه عکس بزرگتر بود، اضافه‌اش رو مخفی کن */
+
+}
+.card_img--height {
+  object-fit: contain;
+  margin: 0 auto; /* وسط‌چین بشه */
+}
+.card_off {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-text-div);
+  font-size: 1.1rem;
+  width: 4rem;
+  height: 2rem;
+background-color: #DB4444;
+top: 4%;
+left: 4%;
+border-radius: 10%;
+z-index: 10;
+}
+.card_like{
+  position: absolute;
+  background-color: var(--color-text-div);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  top: 5%;
+  right: 5%;
+}
+.card_like svg {
+  width: 100%;
+  height: 100%;
+}
+.card_view{
+  position: absolute;
+  background-color: var(--color-text-div);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  top: 20%;
+  right: 5%;
+}
+.card_view svg {
+  width: 100%;
+  height: 100%;
+}
+.card_btn {
+color: var(--color-text-div) !important;
+background-color: var(--color-bg-div) !important;
+visibility: hidden;
+transition: opacity 0.3s ease;
+opacity: 0;
+}
+.btn_view {
+  color: var(--color-text-div) !important;
+}
+/* slider */
+.scroll-snap-x {
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+/*  hide scroll bar */
+.slider_track {
+  overflow-x: scroll;
+  scrollbar-width: none; 
+  -ms-overflow-style: none;  
+}
+
+.slider_track::-webkit-scrollbar {
+  display: none;  
+}
+.btn_view--hover {
+  background-color: #FF1744 !important;
 }
