--- a/styles/index.css
+++ b/styles/index.css
@@ -52,6 +52,13 @@ a {
 }
 
 /* custom color */
+.slide--color {
+  background-color: var(--color-bg-div);
+}
+
+.slide_shop {
+  color: var(--color-text-div) !important;
+}
 
 .green_c {
   color: #00FF66;
@@ -170,14 +177,6 @@ header_bottom
   color: var(--color-text-div);
 }
 
-.slide--color {
-  background-color: var(--color-bg-div);
-}
-
-.slide_shop {
-  color: var(--color-text-div);
-}
-
 .slide_shop:hover {
   transition: all ease-in .1s;
   text-decoration: underline;
@@ -260,7 +259,7 @@ border-radius: .3rem;
 /* card */
 .card_product {
   width: 100%;    
-  max-width: 27rem;
+  max-width: 26rem;
   max-height: 35rem;
   background-color: #F5F5F5 !important;
   padding-top: 5rem;
@@ -290,10 +289,10 @@ border-radius: .3rem;
   justify-content: center;
   color: var(--color-text-div);
   font-size: 1.1rem;
-  width: 4rem;
-  height: 2rem;
+  width: 4.4rem;
+  height: 2.5rem;
 background-color: #DB4444;
-top: 4%;
+top: 3%;
 left: 4%;
 border-radius: 10%;
 z-index: 10;
@@ -351,4 +350,107 @@ opacity: 0;
 }
 .btn_view--hover {
   background-color: #FF1744 !important;
+}
+.Categories_content {
+  color: var(--color-text-div);
+}
+/* section our product */
+.outside_circle {
+  width: 2.3rem;
+  height: 2.3rem;
+  background-color: var(--color-text-div);       
+  border: 3px solid var(--color-bg-div);  
+  border-radius: 50%;
+}
+
+.inside_circle {
+  width: 1.3rem;
+  height: 1.3rem;    
+  border-radius: 50%;
+  background-color: #FB1314;    
+}
+.circle_item {
+  width: 2.3rem;
+  height: 2.3rem;     
+  border-radius: 50%;
+}
+.inside_circle--second {
+  width: 1.3rem;
+  height: 1.3rem;    
+  border-radius: 50%;
+  background-color: #EEFF61;    
+}
+.inside_circle--third {
+  width: 1.3rem;
+  height: 1.3rem;    
+  border-radius: 50%;
+  background-color: var(--color-bg-div);    
+}
+.inside_circle--forth {
+   width: 1.3rem;
+  height: 1.3rem;    
+  border-radius: 50%;
+  background-color: #184A48;     
+}
+.card_new {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-text-div);
+  font-size: 1.1rem;
+  width: 4.4rem;
+  height: 2.5rem;
+background-color: #00FF66;
+top: 3%;
+left: 4%;
+border-radius: 10%;
+z-index: 10;
+}
+/* new arrival */
+.product_img_first {
+  background-image: url("../images/main/last-section/4.png");
+  /* height: auto; */
+  /* min-height: 52rem; */
+  margin-bottom: 1rem;
+}
+.product_img_second {
+  background-image: url("../images/main/last-section/1.png");
+  /* min-height: 24rem; */
+  margin-bottom: 1rem;
+}
+.product_img_third {
+  background-image: url("../images/main/last-section/2.png");
+  /* min-height: 20rem; */
+}
+.product_img_forth {
+  background-image: url("../images/main/last-section/3.png");
+}
+.product_img_first,
+.product_img_second,
+.product_img_third,
+.product_img_forth {
+  color: var(--color-text-div);
+  aspect-ratio: 4 / 3;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: var(--color-bg-div);
+  box-sizing: border-box;
+  border-radius: .6rem;
+}
+.link_shop:hover {
+  text-decoration: underline !important;
+  transition: all .2s ease-in-out;
+}
+.item_outside {
+  background-color: #7D8184;
+  width: 6rem;
+  height: 6rem;
+}
+.item_inside {
+  background-color: var(--color-bg-div);
+  width: 4.5rem;
+  height: 4.5rem;
 }
