--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@ html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
   /* 10px */
 }
 
